--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -129,7 +129,19 @@
           </div>
         </div>
       </section>
+
+      <div class="popup">
+        <div class="popup__answer">
+          <div class="popup__container">
+            <div class="popup__content">
+              <div class="popup__text"></div>
+              <button class="popup__close-btn">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+
   </main>
   <footer class="footer">
     <div class="container">
