feat: add drag n drop and settings

--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -170,16 +170,17 @@
                 <button class="clear__btn" data-color="clear">Выкл</button>
               </div>
             </div>
+            <button class="tree__btn-settings">Сбросить настройки</button>
           </div>
 
           <div class="center">
-            <p class="welcom__text">Выбирите фон и ёлку</p>
             <div class="snow"></div>
-            <img class="tree__box" usemap="#tree-map" alt="tree">
+            <div class="lights"></div>
+           
             <map name="tree-map">
               <area coords="11,543,59,546,96,532,97,506,70,485,39,465,26,437,79,435,120,421,116,383,83,358,125,356,119,329,124,269,115,222,185,180,181,133,222,69,240,18,263,5,274,36,301,62,300,93,297,124,307,163,347,140,349,183,352,219,394,210,404,236,372,275,397,281,385,310,367,337,386,355,418,348,430,369,373,399,404,406,408,431,450,440,458,473,415,485,424,504,436,529,489,531,494,558,475,573,472,587,465,622,444,660,430,678,377,668,375,689,348,701,302,698,264,698,233,699,197,696,183,702,165,646,143,685,108,681,51,624,14,581,4,558" shape="poly">
             </map>
-            <div class="lights"></div>
+            <img class="tree__box" usemap="#tree-map" alt="tree" src="./assets/tree/1.png">
           </div>
 
           <div class="right__side">
